# pandas-sphinx

./: .buildinfo  .gitignore  README.md  dev.py  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  reference.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  installation.doctree  reference.doctree
.github/workflows/: documentation.yml  release.yml
docs/: conf.py  index.rst  installation.rst  reference.rst
pandas_sphinx/: __init__.py  constants.py  version.py
