[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandas-sphinx"
description = "Render a pandas DataFrame as an opinionated table for Sphinx."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [{ name = "João Palmeiro", email = "jm.palmeiro@campus.fct.unl.pt" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = ["pandas>=1.3.4", "tabulate"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/joaopalmeiro/pandas-sphinx#readme"
Issues = "https://github.com/joaopalmeiro/pandas-sphinx/issues"
Source = "https://github.com/joaopalmeiro/pandas-sphinx"

[tool.hatch.version]
# path = "pandas_sphinx/__init__.py"
path = "pandas_sphinx/version.py"

[tool.hatch.envs.format]
detached = true
dependencies = ["black", "isort"]

[tool.hatch.envs.format.scripts]
i = "isort --profile black ."
b = "black ."
check = "pip list"

[tool.hatch.envs.lint]
detached = true
dependencies = ["interrogate"]

[tool.hatch.envs.lint.scripts]
i = "interrogate -vv ."
ib = "interrogate --generate-badge assets/ --badge-style flat"
check = "pip list"

# https://github.com/pypa/hatch/blob/hatch-v1.6.3/pyproject.toml#L72
# https://hatch.pypa.io/1.6/build/#configuration
[tool.hatch.build.targets.sdist]
exclude = [".github/", ".vscode/", "assets/", "dev.py"]
